Debug docker image to investigate memory leak